Collect every reason a reading came to nothing, and rank none of them
A reading of a number comes to none for two kinds of reason: an
observation that did not come back whole, and a walk that arrived at no
value. Both were carried, and every place that folds them was written to
prefer the first — a quantity over several terms, a point tried against
several readings, a point tried against several rows. Each preference
throws the other away, and which one a report says then comes out of the
order a map or a list happened to be walked in.

Two observations were already collected rather than ranked. The second
kind is another reason and not a competing case, so it goes in the same
set: `ReadingGap` is what a reading met, `Stands` and `Met` carry a set of
them, and the only reader that may take one kind alone is the one that
makes an observation's gap — which takes the observations, because that
is what it is about.

A run the walk never reached said "this is no number of that". That is an
answer about the values, and there were none: a place this compiler could
not reach came out as the model putting the row somewhere else, and the
point was missed rather than undecided.

And a point whose measurement fell short is searched again. Without it
nothing at such a point is ever built, so the writability half of an
undecided obligation is a state nothing reaches. It costs a composed row
run at 212 points across the suite, of which 16 come back unplaced and
say what no other reading can.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>